src/app/file-drop-page/loading-custom/loading-custom.component.scss
.instruction b{
  color:rgb(250, 138, 47);
}


.spin-wrapper{
    position: relative;
    height: 43vh;
    background: #EEEEEE;
    width: 95vw;

  .spinner{
    height: 18vw;
    width: 18vw;
    border: 3px solid transparent;
    border-top-color: #1A1837;
    top: 20%;
    left: 50%;
    margin: -30px;
    border-radius: 50%;
    animation: spin 2s linear infinite;
    margin-left: auto;
    margin-right: auto;
    
    &:before, &:after{
      content:'';
      position: absolute;
      border: 3px solid transparent;
      border-radius: 50%;
    }
    
    &:before{
      border-top-color: rgb(250, 138, 47);
      top: -12px;
      left: -12px;
      right: -12px;
      bottom: -12px;
      animation: spin 3s linear infinite;
    }
    
    &:after{
      border-top-color: rgb(250, 138, 47);
      top: 6px;
      left: 6px;
      right: 6px;
      bottom: 6px;  
      animation: spin 4s linear infinite;
    }
  }
}

@keyframes spin{
  0% {transform: rotate(0deg);}
  100% {transform: rotate(360deg);}
}
@keyframes inverseSpin{
  0% {transform: rotate(360deg);}
  100% {transform: rotate(0deg);}
}

.text{
    margin-top:0;
    text-align: center;
    background : #1A1837;
    height: 15vh;
    background: #1A1837;
    margin-top: -4.1%;
    margin-bottom: 3%;
    width: 102%;
    margin-left: -1%;
    color:white;
}

hr.overview{
  display:block;
  border:none;
  height:1px;
  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#EEEEEE), to(rgba(40, 37, 88, 0.815)));
  background: -moz-linear-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#EEEEEE), to(rgba(40, 37, 88, 0.815)));
  background: -ms-linear-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#EEEEEE), to(rgba(40, 37, 88, 0.815)));
  width : 100%;
  margin : 2%;
  margin-left: auto;
	margin-right: auto;
}


.spinner p{
  font-size: 5em;
  animation: inverseSpin 2s linear infinite;
  text-align: center;
  color : #1A1837;
}

.instruction{
  margin-top:2.5%;
  background : #1A1837;
  color:white;
  margin-left: -1.1%;
  padding-left: 1%;
  width: 101.1%;
  padding-bottom: 1%;
}

.instruction p{
  margin-top:0;
  margin-bottom:0;
}

